data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1709.wast
;; 10. **Test Description**: Test a `br_if` that should conditionally jump out of a `block` instruction. Set different variables to zero and non-zero to check if the `br_if` respects the condition and unwinds stack as expected.     - **Constraint Checked**: Ensures that stack is properly unwound only when the branch condition is true.     - **Relation to Incorrect Evaluation**: Ensures that the condition correctly controls stack unwinding and branching behavior, identifying any faulty condition check.

(assert_invalid
  (module (func (result i32)
    (block (result i32) (br_if 0 (i32.const 1) (i32.const 42)) (i32.const 0))
  ))
  "type mismatch"
)